# betsapi

./: .gitignore  README.md  pyproject.toml
betsapi/: __init__.py  cli.py  config.py  layout.py  links.py  main.py  table.py  utils.py
